[1.19.2] code cleanup and lang tweaks